release: v1.2.1 cleanup, hardening, and ignore updates